--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -1,4 +1,40 @@
 % Encoding: UTF-8
+
+@article{garten2010recent,
+  title={Recent progress in automatically extracting information from the pharmacogenomic literature},
+  author={Garten, Yael and Coulet, Adrien and Altman, Russ B},
+  journal={Pharmacogenomics},
+  volume={11},
+  number={10},
+  pages={1467--1489},
+  year={2010},
+  publisher={Future Medicine}
+}
+
+
+@article{nadeau2007survey,
+  title={A survey of named entity recognition and classification},
+  author={Nadeau, David and Sekine, Satoshi},
+  journal={Lingvisticae Investigationes},
+  volume={30},
+  number={1},
+  pages={3--26},
+  year={2007},
+  publisher={John Benjamins publishing company}
+}
+
+@article{garten2010recent,
+  title={Recent progress in automatically extracting information from the pharmacogenomic literature},
+  author={Garten, Yael and Coulet, Adrien and Altman, Russ B},
+  journal={Pharmacogenomics},
+  volume={11},
+  number={10},
+  pages={1467--1489},
+  year={2010},
+  publisher={Future Medicine}
+}
+
+
 @book{JurafskyM09,
   author    = {Dan Jurafsky and
                James H. Martin},
@@ -73,8 +109,14 @@
         language={English}
 }
 
-
-
+@book{Sugiyama2015,
+ author = {Sugiyama, Masashi},
+ title = {Introduction to Statistical Machine Learning},
+ year = {2016},
+ isbn = {9780128023501},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+} 
 @Article{ahn2010link,
   author       = {Ahn, Yong-Yeol and Bagrow, James P and Lehmann, Sune},
   title        = {Link communities reveal multiscale complexity in networks},
@@ -243,6 +285,15 @@
   publisher = {{ACL}},
   year     = {2009},
 }
+@incollection{liu2012survey,
+  title={A survey of opinion mining and sentiment analysis},
+  author={Liu, Bing and Zhang, Lei},
+  booktitle={Mining text data},
+  pages={415--463},
+  year={2012},
+  publisher={Springer}
+}
+
 
 @InProceedings{Panchenko2017,
   author    = {Panchenko, A. and Faralli, S. and Ponzetto, S. P. and Biemann, C.},
@@ -250,6 +301,13 @@
   booktitle = {{Proceedings of the 15th Conference of the European Chapter of the Association for Computational Linguistics (EACL 2017)}},
   publisher = {The Association for Computer Linguistics},
   year     = {2017},
+}
+@book{ClarkBook2010,
+title = "The Handbook of Computational Linguistics and Natural Language Processing",
+author = "Alexander Clark and Chris Fox and Shalom Lappin",
+year = "2010",
+publisher = "Wiley-Blackwell",
+
 }
 
 @Article{clauset2008hierarchical,
@@ -315,6 +373,14 @@
   organization = {ACM},
   year        = {2014},
 }
+
+@phdthesis{gupta2015distantly,
+  title={Distantly Supervised Information Extraction Using Bootstrapped Patterns},
+  author={Gupta, Sonal},
+  year={2015},
+  school={Stanford University}
+}
+
 
 @InProceedings{2009.Agirre.PersonalizedPageRankWSD,
   author    = {Agirre, Eneko and Soroa, Aitor},
