--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -1,6 +1,6 @@
 \begin{titlepage}
 \begin{center}
-\noindent {\large \textbf{UNIVERSITY OF LYON - LUMIERE LYON 2}} \\
+\noindent {\large \textbf{UNIVERSITY OF LYON - LUMIÈRE LYON 2}} \\
 \vspace*{0.3cm}
 \noindent {\LARGE \textbf{ECOLE DOCTORALE INFOMATHS}} \\
 \noindent \textbf{SCIENCES ET TECHNOLOGIES DE L'INFORMATION \\ ET DE LA COMMUNICATION} \\
@@ -11,7 +11,7 @@
 \vspace*{0.3cm}
 \noindent \LARGE \textbf{PhD of Science} \\
 \vspace*{0.3cm}
-\noindent \Large of the Universit of Lyon - Lumière 2\\
+\noindent \Large of the University of Lyon - Lumière 2\\
 \noindent \Large \textbf{Specialty : \textsc{Computer Science}}\\
 \vspace*{0.4cm}
 \noindent \large {Defended by\\}
@@ -24,22 +24,22 @@
 \vspace*{0.2cm}
 \noindent \Large prepared at Université de Lyon 2, \textsc{ERIC} Laboratory
 \vspace*{0.2cm}
-\noindent \large defended on February 14, 2007 \\
+\noindent \large defended on  \\
 \vspace*{0.1cm}
 \end{center}
 \noindent \large \textbf{Jury :} \\
 \begin{center}
 \noindent \large 
-\begin{tabular}{llcl}
-      \textit{Reviewers :}	& Patrick \textsc{Clarysse}		& - & CNRS (CREATIS)\\
-				& Louis \textsc{Collins}		& - & McGill University\\
-      \textit{Advisor :}	& Grégoire \textsc{Malandain}		& - & INRIA (Asclepios)\\
-      \textit{President :}	& Nicholas \textsc{Ayache}		& - & INRIA (Asclepios)\\
-      \textit{Examinators :}   & Pierre-Yves \textsc{Bondiau}          & - & Centre Antoine Lacassagne (Nice)\\
-      				& Guido \textsc{Gerig}			& - & University of North Carolina\\
-      				& Vincent \textsc{Grégoire}		& - & Université Catholique de Louvain\\
-      \textit{Invited :}		& Hanna \textsc{Kafrouni}		& - & DOSISoft S.A.
-\end{tabular}
+%\begin{tabular}{llcl}
+%      \textit{Reviewers :}	& Patrick \textsc{Clarysse}		& - & CNRS (CREATIS)\\
+%				& Louis \textsc{Collins}		& - & McGill University\\
+%      \textit{Advisor :}	& Grégoire \textsc{Malandain}		& - & INRIA (Asclepios)\\
+%      \textit{President :}	& Nicholas \textsc{Ayache}		& - & INRIA (Asclepios)\\
+%      \textit{Examinators :}   & Pierre-Yves \textsc{Bondiau}          & - & Centre Antoine Lacassagne (Nice)\\
+%      				& Guido \textsc{Gerig}			& - & University of North Carolina\\
+%      				& Vincent \textsc{Grégoire}		& - & Université Catholique de Louvain\\
+%      \textit{Invited :}		& Hanna \textsc{Kafrouni}		& - & DOSISoft S.A.
+%\end{tabular}
 \end{center}
 \end{titlepage}
 \sloppy
