--- a/Chapter1.tex
+++ b/Chapter1.tex
@@ -78,7 +78,7 @@ These contributions are tested and evaluated using two different NLP semantic ta
 
 \subsection{Modeling linguistic features}
 \paragraph{Challenge}
-Representing unstructured text within a model that describes textual units and their corresponding features is a critical step within a NLP process. Textual units -- either words, sentences, paragraphs, documents, etc -- need to be represented by some kind of model that will allow for numerical analyses to be applied. Usually, textual units are represented in a vectorial space, where each dimension represents a feature; or in a graph-like structure, where features link units together. Concerning the features themselves, their selection is often an empirical process determined  by the final goal of the NLP process at hand. Nonetheless,  we have access to several types of linguistic features, each one representing the text from different points of view.  Furthermore, texts usually containing large vocabularies involves the need of an efficient way of storing a corpus and its features. These possibilities entail the following research questions: what type of model can we employ to represent a corpus through a set of heterogeneous features, extracted from itself, while keeping record of the relationships between textual units? How can we organize and store this model as simply and efficiently possible? These questions allow us to properly constitute a linguistic resource adapted to solve NLP tasks while having an heterogeneous description of the textual units\footnote{In this work we focus on words. As such, the rest of this dissertation deals with the representation of words.}
+Representing unstructured text within a model that describes textual units and their corresponding features is a critical step within a NLP process. Textual units -- either words, sentences, paragraphs, documents, etc -- need to be represented by some kind of model that will allow for numerical analyses to be applied. Usually, textual units are represented in a vectorial space, where each dimension represents a feature; or in a graph-like structure, where features link units together. Concerning the features themselves, their selection is often an empirical process determined  by the final goal of the NLP process at hand. Nonetheless,  we have access to several types of linguistic features, each one representing the text from different points of view.  Furthermore, texts usually containing large vocabularies involves the need of an efficient way of storing a corpus and its features. These possibilities entail the following research questions: \textbf{what type of model can we employ to represent a corpus through a set of heterogeneous features, extracted from itself, while keeping record of the relationships between textual units?} \textbf{How can we organize and store this model as simply and efficiently possible?} Answering these questions would allow us to  properly design and build a linguistic resource containing heterogeneous descriptions of the textual units\footnote{In this work we focus on words. As such, the rest of this dissertation deals with the representation of words.} adapted to solve NLP tasks.
 
 
 \paragraph{Contribution}
@@ -93,24 +93,28 @@ Lastly, as a proof of concept and in order to test the implementation practicali
 
 \subsection{Leveraging the network to find semantic relatedness}
 \paragraph{Challenge}
-De
-The first practical contribution, built upon the previous model, address the complex task of Word Sense Induction and Disambiguation (WSI and WSD).
-WSD consists in assigning a sense to a word according to its context (usually the paragraph it appears in). The set of senses is usually fixed, and given in advance. We use WSD in NLP because usually word senses are more beneficial than simple word forms for a variety of NLP tasks. Nonetheless, in recent works, it is common that before applying WSD, we first try to automatically find the set of senses for each word with a word sense induction system. These senses are ad-hoc to the treated corpus and thus can give us more flexibility in terms of domain adaptation and thus provide better meanings to chose from to a WSD system. Our contribution addresses both tasks.
-
-Based on the hypergraph model proposed before, we need to define 
-
-%The main disadvantage of pure WSD is the use of a fixed set of senses. Constraining the possible senses in this way may  be counterproductive when dealing with specific in-domain text, as senses are dependent of the domain a text is discussing. Furthermore, word senses are dynamic and ever changing.
-
-WSI is usually solved using vectorial representations for each word. However, since the goal of this application (and that of our third contribution) is to validate in 
-
+Leveraging the structure within the proposed linguistic network is one of our main reasons to build such a graph-based language resource. This structure, namely the features linking words  together, originate groups or communities of related words within the network. In that sense, leveraging these latent communities is still today an open question in the domain of graph-based NLP. Particularly in the context of semantic NLP tasks, where determining the relation among words is of utmost importance, we rise the following questions: \textbf{what kind of communities exist within language networks?} \textbf{How can we find and employ them to solve NLP tasks?} Furthermore, assuming an heterogeneous network like the one we propose, \textbf{what are the quantitative and qualitative differences, both in terms of performance and results, between the different representations existing within the network?} Determining the structure inside a language network, as well as devising an algorithm to exploit it would allow us to better understand the role of communities in  graph-based approaches for NLP. Finally, getting a glimpse of the differences between each heterogeneous feature can help us to decide which is the most appropriate according to a NLP system objective. 
 
 
 \paragraph{Contribution}
-An algorithm that leverages  the structure of the network in order to solve word sense induction and disambiguation. Our proposed method takes into consideration the "real-world" characteristics of the graph to group similar senses and then assign them to target words. We  improve the overall performance compared to other similar graph-based techniques.
+Linguistic networks are complex structures that may hold  heterogeneous entities and links together. Properly leveraging these structures has been indeed a popular area of research in the NLP literature. 
+
+We propose a variant to a literature algorithm that solves word sens induction and disambiguation mainly by leveraging  the structure of a language network in. The assumption of the algorithm is that of the network having "real-world" characteristics, broadly, this means that there are several tight-knit groups of words within the structure. Nonetheless, contrary to the existent model, our proposition differs regarding the considerably lower number of parameters by adjusting them automatically according to the statistics of the concerned network. We also allow for more flexibility of the studied contexts of each word. Furthermore, we leverage the structure of our proposed linguistic model and go beyond the classic homogeneous cooccurrences by studying the effect of heterogeneous features on the quality of the senses induced by the system. Our experiments show the interest of our method by improving on the performance of similar methods and by being on the same ballpark of state-of-the-art methods. We also thoroughly analyze the characteristics of the results --the word senses-- according to the different types of  obtained by our system.
+
+ This We  improve the overall performance compared to other similar graph-based techniques.
+
 \subsection{Combining features and dealing with sparsity}
 \paragraph{Challenge}
 
- We explore multimedia fusion techniques to complement the features hold by the network. Specifically, we focus on solving named entity recognition and word sense induction and disambiguation by applying feature-combination methods that have already shown their efficiency in the multimedia analysis domain.  Our results show that the combination of textual features indeed improves the performance compared to single feature representations and trivial features concatenation. Even more, we experiment with background information from open text sources to further improve the performance of our models. Finally, we also present an analysis on the behavior of features according to different types of senses and entity classes.
+While the proposed linguistic network contain heterogeneous features, in our previous propositions we have exclusively employed them separately. Nonetheless, employing these different attributes on a single textual representation is equally useful in terms of solving NLP applications. A certain type of feature may indicate relations that are completely unknown in another representation space. Thus a certain type of features can complement another to improve the overall description of words.
+
+Another challenge that arises when building large cooccurrence networks, such as ours, is data sparsity. Indeed, sparsity is one of the main characteristics of textual data. Natural language processing systems rely on accurate information being found within a corpus. However, it is hard to see all the possible word cooccurrences in an input corpus and thus a system trained from it is not able to apply the acquired knowledge when it encounters unseen words and their cooccurrences.
+
+
+Towards addressing both challenges previously described we pose the following questions: \textbf{how to alleviate data sparsity on textual data?}  Concerning combining linguistic features, h\textbf{ow can we produce a single textual representation  that is able to leverage the complementarity among features?} Lastly, \textbf{what is the behavior of combining features against using them independently?} The answer to these questions may shed light into more robust NLP systems, able to cope with sparsity while leveraging at the same time useful information coming from different types features.
+
+
+% We explore multimedia fusion techniques to complement the features hold by the netuwork. Specifically, we focus on solving named entity recognition and word sense induction and disambiguation by applying feature-combination methods that have already shown their efficiency in the multimedia analysis domain.  Our results show that the combination of textual features indeed improves the performance compared to single feature representations and trivial features concatenation. Even more, we experiment with background information from open text sources to further improve the performance of our models. Finally, we also present an analysis on the behavior of features according to different types of senses and entity classes.
 
 
 
@@ -135,18 +139,19 @@ An algorithm that leverages  the structure of the network in order to solve word
 
 
 %\section{Contributions}
-%Having cited the disadvantages of current language representations and applications, we set out to fill the gaps with our own propositions. First, in order to have a dataset to test and work with, we parsed and stored the English Wikipedia taking into account largely-ignored syntactic information. Secondly, we fitted our linguistic network to a sample of the parsed Wikipedia corpus. Thirdly, we proposed an algorithm to solve word sense induction and disambiguation by leveraging the network's structure. Finally, we present a method that combines textual features to solve both named entity recognition and again word sense induction and disambiguation. More concisely, we make the following contributions in this dissertation:
+Addressing the sparsity of textual data is not an easy task and often involves complex procedures and loss of information. To alleviate this issue, we propose the application of multimedia analysis fusion techniques to solve NLP semantic tasks. The fusion methods we employ comprise a set of methods to combine (or fuse) different types of features into a single unique representation. While combining attributes we also enrich them by leveraging the complementary information  they carry individually. Furthermore, we address the challenge of data sparsity by transferring unseen relations from one feature space to another, that is, we obtain a denser similarity space by joining together both feature spaces. The experiments we carry out, in word sense induction and disambiguation and named entity recognition, show the pertinence of our approach. Specifically, we try different fusion techniques as well as several fusion configurations to improve the tasks' performance compared with using representations independently. Additionally, we study to what extent each type of fusion employed affects the performance of the tasks we evaluate.
 
-Figure \ref{fig:challenges_contribs} synthesizes the concerned NLP process-flow stages, their existing challenges and their related contributions, and the tasks used to validate our contributions. We briefly introduce our contributions and their context in the following subsection.
+
 
 \begin{figure*}
 \centering
 \includegraphics[width=1\linewidth]{./images/Chapitre1/challenges_contribs.pdf}
-\caption{}
+\caption{Block diagram of the NLP steps of interest, the challenges we address, and the contributions we propose.}
 \label{fig:challenges_contribs}
 \end{figure*}
 \section{Structure of the Dissertation}
-The remainder of this thesis is structured as follows:
+
+Figure \ref{fig:challenges_contribs} synthesizes the concerned NLP process-flow stages of this work (first line), the challenges that we aim to alleviate, and their effect on the contributions we propose. The remainder of this thesis is structured as follows:
 \paragraph{Chapter \ref{chap:backgnd}} This chapter has a detailed overview about the first four axes of this thesis: how we can represent words from a lexical, syntactic and semantic point of view, then, how we find relatedness among words based on  the distributional hypothesis, and how we link both words and features together in a language network to discover their structure and to extract useful knowledge. 
 %
 %Afterwards, we present how these features can be combined to improve the results of single-feature based solutions. 
