--- a/Chapter3.tex
+++ b/Chapter3.tex
@@ -5,6 +5,13 @@ We present in this chapter our model proposition to stock linguistic data. This 
 \end{abstractchap}
 \minitoc
 
+\begin{figure}
+\centering
+\includegraphics[width=1\linewidth]{./images/Chapitre3/main_diag.pdf}
+\caption{Modular description of this dissertation}
+\label{fig:maindiag}
+\end{figure}
+
 
 Building upon previous linguistic representations \cite{2007.Klapaftis.UOY,2011.Haishan.AHypergraphbased,2014.Tao.Qian.LexicalChainHypergraphWSI}, our model is also based on the use of a hypergraph.
 % As stated before, hypergraphs have been employed in the literature to model complex systems. 
